﻿IMPROVEMENTS / FIXES
- Vessel Spawning:
	- Adjust intra-team spacing to scale better with distance.
	- Fix the inward/outward facing direction when spawning teams and use the same facing direction for all members of a team.
- Weapons:
	- Missiles:
		- Further improvements to loft guidance, added a new field "LoftHomingType" which allows for selection of terminal homing logic. "aam"/"aamlead", "aampure", "pronav" and "augpronav" are currently supported. Both pronav options allow for user defined gains using "pronavGain". Recommended values of ~1-7.
		- Fixed MultiMissileLauncher behavior with loft guidance, as well as pronav/augpronav.
	- Added (or corrected) penetration value for shaped charges to missile/gun/rocket partmenu infocards.

v1.6.2.0
IMPROVEMENTS / FIXES
- General:
	- Fix TweakScale config for Typhoon engine (again).
	- Add Toggle/Enable/Disable pivot action groups to the Claw variants.
	- Add an action group option to give unlimited pivot range to the Claw variants.
	- Tweaks so that asteroids have the proper HP in flight mode.
	- Optimisation of some vector operations.
	- Adds variant texture for ground radars.
	- Fix SIDAM texture variants for standard brown or greyscale.
- Armor:
	- Make the adjustable armor 'clamped' and 'triangle type' options persistent and initialised correctly in the PAW.
- UI:
	- Adjust formatting of some debug telemetry.
	- Fix EMP Hellfire texture URL.
	- Add an indent for missile and CM settings.
- Vessel Mover:
	- Don't apply "Don't Avoid Collisions" while lowering vessels.
- Vessel Spawning:
	- Re-register EVA Kerbals in spawned vessels as active, since KSP de-registers this for some reason.
	- Add a default text for the custom template name field.
	- Automatically add the current custom template to the list if it's not already there when clicking 'save' without requiring clicking 'new' first. (I.e., don't require 'new'→'save' for the initial template.)