@@ -945,7 +945,7 @@ Localization
         #LOC_BDArmory_LoftVelComp = Loft Velocity Compensation
         #LOC_BDArmory_LoftVertVelComp = Loft Vertical Velocity Compensation
         //#LOC_BDArmory_LoftAltComp = Loft Altitude Compensation
-        #LOC_BDArmory_LoftTermRange = Loft Termination Range
+        #LOC_BDArmory_terminalHomingRange = Terminal Homing Range
 
         #LOC_BDArmory_EMPBlastRadius = EMP Blast Radius
         #LOC_BDArmory_OrdinanceAvailable = Ordinance Available
