@@ -4,8 +4,10 @@
 	- Fix the inward/outward facing direction when spawning teams and use the same facing direction for all members of a team.
 - Weapons:
 	- Missiles:
-		- Further improvements to loft guidance, added a new field "LoftHomingType" which allows for selection of terminal homing logic. "aam"/"aamlead", "aampure", "pronav" and "augpronav" are currently supported. Both pronav options allow for user defined gains using "pronavGain". Recommended values of ~1-7.
+		- Further improvements to loft guidance, added a new field "terminalHomingType" which allows for selection of terminal homing logic. "aam"/"aamlead", "aampure", "pronav" and "augpronav" are currently supported. Both pronav options allow for user defined gains using "pronavGain". Recommended values of ~1-7.
+			- IMPORTANT: "LoftTermRange" has been renamed to "terminalHomingRange"!
 		- Fixed MultiMissileLauncher behavior with loft guidance, as well as pronav/augpronav.
+		- Added new "aamhybrid" homingType, uses lead guidance until "terminalHomingRange" is reached, then it will switch to "terminalHomingType", with the same options as loft guidance.
 	- Added (or corrected) penetration value for shaped charges to missile/gun/rocket partmenu infocards.
 
 v1.6.2.0
